# Nexus

./: .dockerignore  .env.example  .env.production  .gitignore  AI_SUGGESTION_UI_PATTERNS.md  CLAUDE.md  DEBUG_FIXES_SUMMARY.md  Dockerfile  HYBRID_AI_QUICK_REFERENCE.md  HYBRID_AI_VISUAL_BUILDER_RESEARCH.md  IMPLEMENTATION_GUIDE_SCHEMA_BUILDER.md  Makefile  PRD.md  PROMPT_EXAMPLES_AND_PATTERNS.md  QUICK_REFERENCE.md  QUICK_START.md  RESEARCH_INDEX.md  RESEARCH_SOURCES.md  RESEARCH_SUMMARY.md  SETUP_COMPLETE.md  convex.json  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  research_conversational_form_schema_builders.md  tailwind.config.js  tech-stack.md  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
backend/: .env.example  main.py  pyproject.toml  test_endpoints.sh
backend/.archive/: test_agent.py
backend/app/: agui_main.py  config.py  main.py
backend/app/api/: id_generation.py  schemas.py  sessions.py  stt.py
backend/app/db/: memory_store.py  models.py  redis_client.py  seed_default_schema.py  sqlite.py  supabase_client.py
backend/app/models/: agent.py  agui_events.py  id_generation.py  schema.py  session.py
backend/app/services/: agent_service.py  agui_agent_service.py  file_service.py  form_submission_service.py  form_template_service.py  id_service.py  schema_service.py  session_service.py  stt_service.py
backend/app/tests/: test_agent_service.py
backend/app/tools/: __init__.py  agui_commit.py  commit.py  confirmation.py  (+2 more)
backend/tests/: __init__.py  test_sqlite.py  test_stt_api.py  test_stt_service.py
(+468 files in other folders)
