[project]
name = "nexus-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agno>=1.4.11",
    "aiosqlite>=0.20.0",
    "fastapi>=0.124.2",
    "httpx>=0.28.1",
    "openai>=2.11.0",
    "pdf2image>=1.17.0",
    "Pillow>=10.0.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "redis>=7.1.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "supabase>=2.25.1",
    "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.9",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
